# dx3

./: .gitignore  README.md  start_app.bat
src/: index.html  main.js
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/src/: config.rs  crc.rs  dualsense.rs  hidhide.rs  main.rs  mapping.rs  state.rs  worker.rs
