[package]
name = "dx3"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["system-tray", "shell-open", "window-all", "custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vigem-client = "0.1"
hidapi = "2.6"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

# Note: We keep raw-window-handle/windows if we need low-level hacks, 
# but Tauri usually handles windowing. We'll keep them for now just in case.
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
serde-big-array = "0.5.1"
ctrlc = "3.5.1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
